<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:background="#e67070"
    tools:ignore="ExtraText">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       tools:text="@string/question_russia"
       android:textSize="20sp"
       android:textColor="@color/white"
       android:gravity="center"
       android:id="@+id/question_text_view"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:layout_weight="1"
            android:layout_margin="10dp"

            android:textColor="@color/white"
            android:backgroundTint="#ffa1a1"
            android:id="@+id/true_button"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:backgroundTint="#ffa1a1"
            android:id="@+id/false_button"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:backgroundTint="#ffa1a1"
        android:text="@string/next_button"
        android:textColor="@color/white"

        />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:backgroundTint="#ffa1a1"
        android:text="@string/back_button"
        android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>
